<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HONK</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="filter">Filter</string>
    <string name="add_reminder">Add reminder</string>
    <string name="goose">Goose mascot</string>
    <string-array name="reminder_categories">
        <item>WORK</item>
        <item>SCHOOL</item>
        <item>PET</item>
        <item>HOME</item>
    </string-array>
    <string-array name="filter_date_options">
        <item>All Dates</item>
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
    </string-array>
    <string-array name="filter_category_options">
        <item>All Categories</item>
        <item>Work</item>
        <item>School</item>
        <item>Home</item>
        <item>Pet</item>
    </string-array>

    <string-array name="filter_priority_options">
        <item>All Priorities</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
